[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]


[project]
name = "rdmo-plugins-cff"
description = "cff export plugin for RDMO."
version = "0.0.1"
readme = "README.md"
keywords = [
  "data management plan",
  "software management plan",
  "smp",
  "masmp",
  "rdmo",
  "research data",
  "research data management",
  "cff",
]
license = {text = "Apache-2.0"}
authors = [
  {name = "RDMO Arbeitsgemeinschaft", email = "rdmo-team@listserv.dfn.de"},
]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django :: 4.2",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "rdmo~=2.0",
]

[project.urls]
repository = "https://github.com/rdmorganiser/rdmo-plugins-cff"
